--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </div>
             <hr>
             <h2>Explore Mac</h2>
-            <div class="cs-btn">
+            <div class="cs-btn-2">
               <a href="https://www.apple.com/qa/mac/">More From Mac ></a>
               <a href="#contact">contact ></a>
            </div>
@@ -358,7 +358,7 @@
             </div>
             <hr>
             <h2>Explore iPad</h2>
-           <div class="cs-btn">
+           <div class="cs-btn-2">
               <a href="https://www.apple.com/qa/ipad/">More From iPad ></a>
               <a href="#contact">contact ></a>
            </div>
