--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <div class="carousel-inner">
                   <div class="row align-items-center">
                     <div class="col-md-7">
-                      <div class="item-4-content text-md-start">
+                      <div class="item-4-content">
                         <h1 class="">The <span>MAGIC</span> touch</h1>
-                        <p class="hero-p">Make purchases on the App Store, unlock your computer and sign in to websites with Touch ID.
+                        <p class="">Make purchases on the App Store, unlock your computer and sign in to websites with Touch ID.
                           </p>
                           <h2 class="hero-title-2">MAC does <span>that</span></h2>
                          <div class="brn-group">
@@ -155,9 +155,9 @@
                 <div class="carousel-inner">
                   <div class="row align-items-center">
                     <div class="col-md-7">
-                      <div class="item-4-content text-md-start">
+                      <div class="item-4-content">
                         <h1 class="">The <span>EASIEST</span> computer to manage</h1>
-                        <p class="hero-p">With faster setup and fewer support tickets, the IT value adds up.
+                        <p class="">With faster setup and fewer support tickets, the IT value adds up.
                           </p>
                          <div class="brn-group">
                     <a class="btn cs-btn" href="https://www.apple.com/qa/mac/mac-does-that/">Learn More <i class="fa-solid fa-chevron-right"></i></a>
@@ -177,12 +177,12 @@
                 <div class="carousel-inner">
                   <div class="row align-items-center">
                     <div class="col-md-7">
-                      <div class="item-4-content text-md-start">
+                      <div class="item-4-content">
                         <h1 class="">The <span>MAGIC</span> touch</h1>
                         <div class="hero-img-wrapper item-4-img">
                           <img src="images/slide-6.png" class="img-fluid" alt="">
                         </div>
-                        <p class="hero-p">Make purchases on the App Store, unlock your computer and sign in to websites with Touch ID.
+                        <p class="">Make purchases on the App Store, unlock your computer and sign in to websites with Touch ID.
                           </p>
                           <h2 class="hero-title-2">MAC does <span>that</span></h2>
                          <div class="brn-group">
@@ -203,9 +203,9 @@
                 <div class="carousel-inner">
                   <div class="row align-items-center">
                     <div class="col-md-5">
-                      <div class="item-4-content text-md-start">
+                      <div class="item-4-content">
                         <h1 class="">Multitask <span>SUPERFAST</span> with the M2 Chip</h1>
-                        <p class="hero-p">
+                        <p class="">
                           The unified memory architecture of Apple silicon delivers fast, fluid multitasking
                         </p>
                          <div class="brn-group">
@@ -226,9 +226,9 @@
                 <div class="carousel-inner">
                   <div class="row align-items-center">
                     <div class="col-md-5">
-                      <div class="item-4-content text-md-start">
+                      <div class="item-4-content">
                         <h1 class=""><span>EXCEL</span> runs and runs and runs on Mac</h1>
-                        <p class="hero-p">
+                        <p class="">
                          Mac euns the apps you need the Microsoft 365 and outlook, google Workspace and more.
                         </p>
                          <div class="brn-group">
